--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ body {
 }
 
 .contact-section h1 {
-  margin-left: 4px;
+  margin-left: 7px;
   font-size: 4rem;
   font-weight: 700;
   letter-spacing: 1.5px;
@@ -402,11 +402,11 @@ input[type="text"],
 input[type="email"],
 textarea[name="message"] {
   margin: 1rem;
-  height: 6vh;
+  height: 50px;
   width: 80vw;
   /* max-width: 1000px; */
   background-color: #f5f5f5;
-  padding: 10px;
+  padding: 16px;
   border: none;
   border-radius: 5px;
   font-size: 18px;
